Fixed scaling issues on small screens

--- a/TicTacToe.styles.css
+++ b/TicTacToe.styles.css
@@ -1,7 +1,7 @@
 /* /Components/Button.razor.rz.scp.css */
 button[b-yjquoi4oxo] {
     padding: 2px 15px;
-    font-size: clamp(2.5rem, 5vw, 3rem);
+    font-size: clamp(1.8rem, 6vw, 3rem);
     color: var(--button-text-color);
     background-color: var(--primary-color);
     border: none;
@@ -123,7 +123,7 @@ button[b-yjquoi4oxo] {
 }
 /* /Components/MenuWizard.razor.rz.scp.css */
 .heading[b-896yffllyx] {
-    font-size: clamp(3rem, 8vw, 4rem);
+    font-size: clamp(2rem, 8vw, 4rem);
     font-weight: 500;
     color: var(--text-color);
     text-align: center;
@@ -181,9 +181,7 @@ button[b-yjquoi4oxo] {
     display: flex;
     align-items: center;
     justify-content: flex-end;
-    flex-grow: 1;
     text-align: center;
-    width: fit-content;
     gap: 1.5vw;
 }
 
